Switch to matsim 14.0 (#712)
* remove no longer used imports

* remove the "static" thing on top which is no longer necessary

* Change matsim dependency to 14.0
 * Remove Compilation errors
 * Remove as many warnings as I was able to.

* Create maven.yml

* Remove build profile java 9+ This crashed some of the test cases with Java17

* Limit logging output of test cases on GH Actions Build

* Update the pom:
 * remove compiler plugin - this can be done with maven.compiler.x properties
 * replace assembly plugin with shade plugin

Remove Travis.yml, since we are using GH Actions now.

* Adjust CSVFormat to new Apache Commons CSV Version

Co-authored-by: Kai Martins-Turner <kt86@users.noreply.github.com>
Co-authored-by: Kai Nagel <nagel@vsp.tu-berlin.de>